--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -25,6 +25,12 @@ body {
   color: white;
 }
 
+h1 {
+  text-align: center;
+  padding-left: .75em;
+  padding-right: .75em;
+}
+
 nav {
   position: absolute;
 }
